--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -24,3 +24,11 @@ test_tree:
 	go test ./tree -v -coverprofile cover.out
 	go tool cover -html=cover.out -o cover.html
 	xdg-open cover.html
+
+test_graph:
+	make build
+	./packageloader -redis -load -name TestTree -path ./tree/test_tree
+	./packageloader -load -name TestTree -path ./tree/test_tree
+	go test ./graph -v -coverprofile cover.out
+	go tool cover -html=cover.out -o cover.html
+	xdg-open cover.html
