Improve/Fix vscode debug tasks on windows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,12 +6,20 @@
     "configurations": [
 
         {
-            "name": "DEBUG",
+            "name": "CMD_CX",
             "type": "go",
             "request": "launch",
             "mode": "exec",
-            "program": "./bin/cx",
-            "preLaunchTask": "DEBUG",
+            "linux": {
+                "program": "./bin/cx",
+            },
+            "osx": {
+                "program": "./bin/cx",
+            },
+            "windows": {
+                "program": "./bin/cx.exe",
+            },
+            "preLaunchTask": "CMD_CX",
             "showLog": true,
             "args": [
                 "--version",
@@ -19,16 +27,47 @@
             ],
         },
         {
-            "name": "TESTS",
+            "name": "CMD_CXTEST",
             "type": "go",
             "request": "launch",
             "mode": "exec",
-            "program": "./bin/cx",
-            "preLaunchTask": "TESTS",
+            "linux": {
+                "program": "./bin/cxtests",
+            },
+            "osx": {
+                "program": "./bin/cxtests",
+            },
+            "windows": {
+                "program": "./bin/cxtests",
+            },
+            "preLaunchTask": "CMD_CXTEST",
+            "showLog": true,
+            "args": [
+                "--cxpath=../bin/cx",
+                "--wdir=./tests",
+                "--log=fail,stderr",
+                "--disable-tests=gui"
+            ],
+        },
+        {
+            "name": "TEST",
+            "type": "go",
+            "request": "launch",
+            "mode": "exec",
+            "linux": {
+                "program": "./bin/cx",
+            },
+            "osx": {
+                "program": "./bin/cx",
+            },
+            "windows": {
+                "program": "./bin/cx.exe",
+            },
+            "preLaunchTask": "TEST",
             "showLog": true,
             "args": [
                 "--cxpath", "./tests/test-workspace",
-                "./tests/test-workspace-b.cx" 
+                "./tests/test-slices.cx" 
             ],
         },
         {
@@ -36,7 +75,15 @@
             "type": "go",
             "request": "launch",
             "mode": "exec",
-            "program": "./bin/cx",
+            "linux": {
+                "program": "./bin/cx",
+            },
+            "osx": {
+                "program": "./bin/cx",
+            },
+            "windows": {
+                "program": "./bin/cx.exe",
+            },
             "preLaunchTask": "CXFX",
             "showLog": true,
             "args": [
