Fix vscode tasks on osx

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,16 +2,36 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "options": {
-        "env": {
-          "PATH": "C:\\msys64\\usr\\bin;C:\\msys64\\mingw64\\bin"
-        }
+        "linux": {
+            "env": {
+                "PATH": ""
+            }
+        },
+        "osx": {
+            "env": {
+                "PATH": "/bin"
+            }
+        },
+        "windows": {
+            "env": {
+                "PATH": "C:\\msys64\\usr\\bin;C:\\msys64\\mingw64\\bin"
+            }
+        },
      },
     "version": "2.0.0",
     "tasks": [
         {
             "label": "CMD_CX",
             "type": "shell",
-            "command": "C:/msys64/usr/bin/make.exe",
+            "linux": {
+                "command": "",
+            },
+            "osx": {
+                "command": "make",
+            },
+            "windows": {
+                "command": "C:/msys64/usr/bin/make.exe",
+            },   
             "args": [
                 "build-debug"
             ],
@@ -27,7 +47,15 @@
         {
             "label": "CMD_CXTEST",
             "type": "shell",
-            "command": "C:/msys64/usr/bin/make.exe",
+            "linux": {
+                "command": "",
+            },
+            "osx": {
+                "command": "make",
+            },
+            "windows": {
+                "command": "C:/msys64/usr/bin/make.exe",
+            },   
             "args": [
                 "build-tests"
             ],
@@ -43,7 +71,15 @@
         {
             "label": "TEST",
             "type": "shell",
-            "command": "C:/msys64/usr/bin/make.exe",
+            "linux": {
+                "command": "",
+            },
+            "osx": {
+                "command": "make",
+            },
+            "windows": {
+                "command": "C:/msys64/usr/bin/make.exe",
+            },   
             "args": [
                 "build-debug"
             ],
@@ -59,7 +95,15 @@
         {
             "label": "CXFX",
             "type": "shell",
-            "command": "C:/msys64/usr/bin/make.exe",
+            "linux": {
+                "command": "",
+            },
+            "osx": {
+                "command": "make",
+            },
+            "windows": {
+                "command": "C:/msys64/usr/bin/make.exe",
+            },   
             "args": [
                 "build-debug"
             ],
