--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,79 +91,79 @@
                 "--heap-initial=512M",
                 "--heap-max=512M",
                 "++glVersion=gl32",
-                "++data=${workspaceFolder}../../cxfx/resources/",
+                "++data=${workspaceFolder}/../cxfx/resources/",
                 "++hints=resizable",
-                "${workspaceFolder}../../cxfx/src/args/args.cx",
-                "${workspaceFolder}../../cxfx/src/json/json.cx",
-                "${workspaceFolder}../../cxfx/src/mat/math.cx",
-                "${workspaceFolder}../../cxfx/src/mat/v1d.cx",
-                "${workspaceFolder}../../cxfx/src/mat/v1f.cx",
-                "${workspaceFolder}../../cxfx/src/mat/v2f.cx",
-                "${workspaceFolder}../../cxfx/src/mat/v3f.cx",
-                "${workspaceFolder}../../cxfx/src/mat/v4f.cx",
-                "${workspaceFolder}../../cxfx/src/mat/q4f.cx",
-                "${workspaceFolder}../../cxfx/src/mat/m44f.cx",
-                "${workspaceFolder}../../cxfx/src/app/application.cx",
-                "${workspaceFolder}../../cxfx/src/app/callback.cx",
-                "${workspaceFolder}../../cxfx/src/app/event.cx",
-                "${workspaceFolder}../../cxfx/src/fps/profiler.cx",
-                "${workspaceFolder}../../cxfx/src/fps/framerate.cx",
-                "${workspaceFolder}../../cxfx/src/mat/intersect.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/batch.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/graphics.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/state.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/effect.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/shader.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/program.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/particle.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/mesh.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/gltf.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/model.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/texture.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/text.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/target.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/scissor.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/frustum.cx",
-                "${workspaceFolder}../../cxfx/src/gfx/octree.cx",
-                "${workspaceFolder}../../cxfx/src/gui/layer.cx",
-                "${workspaceFolder}../../cxfx/src/gui/skin.cx",
-                "${workspaceFolder}../../cxfx/src/gui/scope.cx",
-                "${workspaceFolder}../../cxfx/src/gui/font.cx",
-                "${workspaceFolder}../../cxfx/src/gui/animation.cx",
-                "${workspaceFolder}../../cxfx/src/gui/control.cx",
-                "${workspaceFolder}../../cxfx/src/gui/label.cx",
-                "${workspaceFolder}../../cxfx/src/gui/picture.cx",
-                "${workspaceFolder}../../cxfx/src/gui/screen.cx",
-                "${workspaceFolder}../../cxfx/src/gui/interface.cx",
-                "${workspaceFolder}../../cxfx/src/gui/focus.cx",
-                "${workspaceFolder}../../cxfx/src/gui/splitter.cx",
-                "${workspaceFolder}../../cxfx/src/gui/window.cx",
-                "${workspaceFolder}../../cxfx/src/gui/keyboard.cx",
-                "${workspaceFolder}../../cxfx/src/gui/list.cx",
-                "${workspaceFolder}../../cxfx/src/gui/graph.cx",
-                "${workspaceFolder}../../cxfx/src/gui/lifter.cx",
-                "${workspaceFolder}../../cxfx/src/gui/scroller.cx",
-                "${workspaceFolder}../../cxfx/src/gui/binder.cx",
-                "${workspaceFolder}../../cxfx/src/gui/combo.cx",
-                "${workspaceFolder}../../cxfx/src/snd/sounds.cx",
-                "${workspaceFolder}../../cxfx/src/snd/audio.cx",
-                "${workspaceFolder}../../cxfx/src/snd/voice.cx",
-                "${workspaceFolder}../../cxfx/src/gam/camera.cx",
-                "${workspaceFolder}../../cxfx/src/phx/physics.cx",
-                "${workspaceFolder}../../cxfx/tutorials/0_colored_quad.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/1_textured_quad.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/2_text.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/3_perspective.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/4_camera.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/5_batch.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/6_model.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/7_menu.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/8_sound.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/9_button.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/10_dialog.cx",
-                //"${workspaceFolder}../../cxfx/tutorials/11_octree.cx",
-                //"${workspaceFolder}../../cxfx/games/skylight/src/menu.cx",
-                //"${workspaceFolder}../../cxfx/games/skylight/src/skylight.cx",
+                "${workspaceFolder}/../cxfx/src/args/args.cx",
+                "${workspaceFolder}/../cxfx/src/json/json.cx",
+                "${workspaceFolder}/../cxfx/src/mat/math.cx",
+                "${workspaceFolder}/../cxfx/src/mat/v1d.cx",
+                "${workspaceFolder}/../cxfx/src/mat/v1f.cx",
+                "${workspaceFolder}/../cxfx/src/mat/v2f.cx",
+                "${workspaceFolder}/../cxfx/src/mat/v3f.cx",
+                "${workspaceFolder}/../cxfx/src/mat/v4f.cx",
+                "${workspaceFolder}/../cxfx/src/mat/q4f.cx",
+                "${workspaceFolder}/../cxfx/src/mat/m44f.cx",
+                "${workspaceFolder}/../cxfx/src/app/application.cx",
+                "${workspaceFolder}/../cxfx/src/app/callback.cx",
+                "${workspaceFolder}/../cxfx/src/app/event.cx",
+                "${workspaceFolder}/../cxfx/src/fps/profiler.cx",
+                "${workspaceFolder}/../cxfx/src/fps/framerate.cx",
+                "${workspaceFolder}/../cxfx/src/mat/intersect.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/batch.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/graphics.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/state.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/effect.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/shader.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/program.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/particle.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/mesh.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/gltf.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/model.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/texture.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/text.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/target.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/scissor.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/frustum.cx",
+                "${workspaceFolder}/../cxfx/src/gfx/octree.cx",
+                "${workspaceFolder}/../cxfx/src/gui/layer.cx",
+                "${workspaceFolder}/../cxfx/src/gui/skin.cx",
+                "${workspaceFolder}/../cxfx/src/gui/scope.cx",
+                "${workspaceFolder}/../cxfx/src/gui/font.cx",
+                "${workspaceFolder}/../cxfx/src/gui/animation.cx",
+                "${workspaceFolder}/../cxfx/src/gui/control.cx",
+                "${workspaceFolder}/../cxfx/src/gui/label.cx",
+                "${workspaceFolder}/../cxfx/src/gui/picture.cx",
+                "${workspaceFolder}/../cxfx/src/gui/screen.cx",
+                "${workspaceFolder}/../cxfx/src/gui/interface.cx",
+                "${workspaceFolder}/../cxfx/src/gui/focus.cx",
+                "${workspaceFolder}/../cxfx/src/gui/splitter.cx",
+                "${workspaceFolder}/../cxfx/src/gui/window.cx",
+                "${workspaceFolder}/../cxfx/src/gui/keyboard.cx",
+                "${workspaceFolder}/../cxfx/src/gui/list.cx",
+                "${workspaceFolder}/../cxfx/src/gui/graph.cx",
+                "${workspaceFolder}/../cxfx/src/gui/lifter.cx",
+                "${workspaceFolder}/../cxfx/src/gui/scroller.cx",
+                "${workspaceFolder}/../cxfx/src/gui/binder.cx",
+                "${workspaceFolder}/../cxfx/src/gui/combo.cx",
+                "${workspaceFolder}/../cxfx/src/snd/sounds.cx",
+                "${workspaceFolder}/../cxfx/src/snd/audio.cx",
+                "${workspaceFolder}/../cxfx/src/snd/voice.cx",
+                "${workspaceFolder}/../cxfx/src/gam/camera.cx",
+                "${workspaceFolder}/../cxfx/src/phx/physics.cx",
+                "${workspaceFolder}/../cxfx/tutorials/0_colored_quad.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/1_textured_quad.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/2_text.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/3_perspective.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/4_camera.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/5_batch.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/6_model.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/7_menu.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/8_sound.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/9_button.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/10_dialog.cx",
+                //"${workspaceFolder}/../cxfx/tutorials/11_octree.cx",
+                //"${workspaceFolder}/../cxfx/games/skylight/src/menu.cx",
+                //"${workspaceFolder}/../cxfx/games/skylight/src/skylight.cx",
             ],
         }
     ]
